Merge upstream neo-voxy: leaf LOD modes, Domum variants, straight-alpha water, plant detector, fakesight rework, far player framework